--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -541,6 +541,7 @@ h5 {
 }
 .header .menu__list {
   display: flex;
+  padding-bottom: 3px;
 }
 .header .menu__list :not(:last-child) {
   padding: 0 36px 0 0;
@@ -551,6 +552,7 @@ h5 {
   }
 }
 .header .menu__link {
+  display: block;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -570,7 +572,7 @@ h5 {
   height: 3px;
   width: 100%;
   left: 0;
-  bottom: -4px;
+  bottom: -2px;
 }
 .header .menu__link:hover {
   color: #FAFAFA;
@@ -816,7 +818,7 @@ h5 {
 }
 @media (max-width: 1279px) {
   .our-friends-pets__title {
-    padding-bottom: 30px;
+    padding-bottom: 28px;
   }
 }
 @media (max-width: 767px) {
@@ -829,7 +831,12 @@ h5 {
 }
 @media (max-width: 1279px) {
   .our-friends-pets .slider-pets {
-    padding-bottom: 8px;
+    padding-bottom: 10px;
+  }
+}
+@media (max-width: 767px) {
+  .our-friends-pets .slider-pets {
+    padding-bottom: 7px;
   }
 }
 .our-friends-pets .slider-pets__wrapper {
